--- a/src/scss/_characters.scss
+++ b/src/scss/_characters.scss
@@ -94,14 +94,14 @@ form{
 }
 
 .searchresults{
-	display: none;
+	// display: none;
 	
 	li{
 		display: block;
 	}
 }
 
-.active{
+#active{
 	display: block;
 }
 
