--- a/src/scss/_matchup.scss
+++ b/src/scss/_matchup.scss
@@ -45,13 +45,20 @@
 
 	}
 }
+div.active{
+	display: block;
+}
 
 
 .search-dock{
+	box-sizing: border-box;
+	display: none;
     text-align: center;
-    width: 100%;
+    width: 60%;
     position: absolute;
-    background-color: rgba(0,0,0, 0.2);
+    background-color: rgba(0, 0, 255, 0.7);
+    border: solid 5px yellow;
+    left: 20%;
 
 	input{
 	height: 70px;
@@ -77,7 +84,6 @@
 	    margin-left: 0%;
 	    font-size: 3em;
 	    padding-top: 5px;
-	    border-left: none;
 	}
 
     h2{
@@ -86,11 +92,7 @@
 }
 
 .searchresults{
-	background-color: #fff;
-    width: 61.75%;
-    margin: 0 auto;
-    border: solid 5px yellow;
-    border-top: none;
+	
     ul{
 		margin: 0;
     }
